// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - isBuilding 1`] = `
<TiltTooltip
  title="help"
>
  <styled.div
    className="isBuilding"
  >
    <span>
       
    </span>
  </styled.div>
</TiltTooltip>
`;

exports[`renders correctly - isHealthy 1`] = `
<TiltTooltip
  title="help"
>
  <styled.div
    className="isHealthy"
  >
    <span>
       
    </span>
  </styled.div>
</TiltTooltip>
`;

exports[`renders correctly - isNone 1`] = `
<TiltTooltip
  title="help"
>
  <styled.div
    className="isNone"
  >
    <ForwardRef(SvgCheckmarkSmall) />
  </styled.div>
</TiltTooltip>
`;

exports[`renders correctly - isPending 1`] = `
<TiltTooltip
  title="help"
>
  <styled.div
    className="isPending"
  >
    <span>
       
    </span>
  </styled.div>
</TiltTooltip>
`;

exports[`renders correctly - isUnhealthy 1`] = `
<TiltTooltip
  title="help"
>
  <styled.div
    className="isUnhealthy"
  >
    <ForwardRef(SvgError)
      fill="#ffffff"
    />
  </styled.div>
</TiltTooltip>
`;

exports[`renders correctly - isWarning 1`] = `
<TiltTooltip
  title="help"
>
  <styled.div
    className="isWarning"
  >
    <ForwardRef(SvgWarning)
      fill="#ffffff"
      height="10px"
      width="10px"
    />
  </styled.div>
</TiltTooltip>
`;
